got element in DOM

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
     <main class="container flex">
-        <div class="carousel">
-            <figure class="p-relative" id="carousel-element">
-                <img src="img/01.webp" alt="">
+        <div id="carousel" class="carousel">
+            <figure class="p-relative">
+                <img src="" alt="">
                 <figcaption class="p-absolute">
-                    <h3>Lorem Ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, illum maiores mollitia doloribus velit sunt, libero veritatis quis corporis tenetur reiciendis rerum exercitationem deleniti error hic quos a adipisci? Id.</p>
+                    <h3></h3>
+                    <p></p>
                 </figcaption>
             </figure>
         </div>
