--- a/index.html
+++ b/index.html
@@ -12,34 +12,16 @@
 </head>
 <body>
     <main class="container flex">
-        <div id="carousel" class="carousel">
-            <figure class="p-relative">
-                <img src="" alt="">
-                <figcaption class="p-absolute">
-                    <h3></h3>
-                    <p></p>
-                </figcaption>
-            </figure>
-        </div>
-        <div id="thumbnails" class="thumbnail p-relative">
-            <div id="prev-button" class="absolute"><i class="fa-solid fa-lg fa-angle-up"></i></div>
-            <figure class="">
-                <img src="img/01.webp" alt="">
-            </figure>
-            <figure class="">
-                <img src="img/01.webp" alt="">
-            </figure>
-            <figure class="">
-                <img src="img/01.webp" alt="">
-            </figure>
-            <figure class="">
-                <img src="img/01.webp" alt="">
-            </figure>
-            <figure class="">
-                <img src="img/01.webp" alt="">
-            </figure>
-            <div id="next-button" class="absolute"><i class="fa-solid fa-lg fa-angle-down"></i></div>
-        </div>
+        <section id="carousel" class="carousel">
+            
+        </section>
+        <section class="p-relative">
+            <div id="prev" class="absolute"><i class="fa-solid fa-lg fa-angle-up"></i></div>
+            <div id="thumbnails" class="thumbnail">
+
+            </div>
+            <div id="next" class="absolute"><i class="fa-solid fa-lg fa-angle-down"></i></div>
+        </section>
     </main>
 </body>
 </html>
